--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <img src="in.png" alt="Instagram">
                     Instagram
                 </div>
-                <button class="open-button" onclick="openLink('https://www.instagram.com/muhammad___shuayb?igsh=MW85YjI4MnE0aGlxcw== ')">Open</button>
+                <button class="open-button" onclick="openLink('https://www.instagram.com/contractionszone?igsh=enpuYjV6dzMzOHV4 ')">Open</button>
             </div>
             <div class="link-container">
                 <div class="link-text">
@@ -243,14 +243,14 @@
                     <img src="u.png" alt="YouTube">
                     YouTube
                 </div>
-                <button class="open-button" onclick="openLink('https://www.youtube.com/@MedWise_MedEasy')">Open</button>
+                <button class="open-button" onclick="openLink('https://www.youtube.com/@THECONTRADICTIONSZONE')">Open</button>
             </div>
             <div class="link-container">
                 <div class="link-text">
                     <img src="t.png" alt="TikTok">
                     TikTok
                 </div>
-                <button class="open-button" onclick="openLink('https://www.tiktok.com/@muhammadshuayb?_t=8scooc4Coq6&_r=1')">Open</button>
+                <button class="open-button" onclick="openLink('https://www.tiktok.com/@thecontradictionszone?_t=8scuPIJH9DJ&_r=1')">Open</button>
             </div>
         </div>
     </div>
