--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: black;
+            background-color: #87ceeb;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -89,7 +89,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: black;
+            background-color: rgba(135, 206, 235, 0.8);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -101,7 +101,8 @@
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            animation: bounce 2s infinite;
+            border: 5px solid white;
+            animation: bounce 2s infinite, pulse 2s infinite;
         }
 
         @keyframes bounce {
@@ -113,10 +114,21 @@
             }
         }
 
+        @keyframes pulse {
+            0%, 100% {
+                box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
+            }
+            50% {
+                box-shadow: 0px 0px 20px rgba(255, 255, 255, 1);
+            }
+        }
+
         .loading-screen p {
             margin-top: 10px;
-            font-size: 1.2em;
-            color: green;
+            font-size: 1.5em;
+            font-family: 'Cursive', sans-serif;
+            color: red;
+            text-shadow: 2px 2px 5px white;
         }
 
         /* Main content styling */
@@ -132,7 +144,7 @@
             border: 5px solid white;
             box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.5);
             animation: pulse 2s infinite;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
 
         @keyframes pulse {
@@ -142,6 +154,15 @@
             50% {
                 box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.9);
             }
+        }
+
+        .profile-text {
+            font-size: 1.5em;
+            font-family: 'Cursive', sans-serif;
+            color: green;
+            text-shadow: 2px 2px 5px white;
+            font-weight: bold;
+            margin-bottom: 20px;
         }
 
         /* Container styling */
@@ -205,14 +226,14 @@
 </head>
 <body>
     <!-- Clouds -->
+    <div class="cloud">⁉️</div>
     <div class="cloud">☁️</div>
-    <div class="cloud">🌛</div>
-    <div class="cloud">🌨️</div>
+    <div class="cloud">❗</div>
 
     <!-- Birds -->
-    <div class="bird">🌕</div>
-    <div class="bird">🌩️</div>
-    <div class="bird">☁️</div>
+    <div class="bird">🤔</div>
+    <div class="bird">💭</div>
+    <div class="bird">❓</div>
 
     <!-- Loading screen -->
     <div class="loading-screen">
@@ -223,13 +244,14 @@
     <!-- Main content -->
     <div class="main-content">
         <img src="n1.png" alt="Profile Picture" class="profile-picture">
+        <div class="profile-text">CONTRADICTIONS ZONE</div>
         <div class="container">
             <div class="link-container">
                 <div class="link-text">
                     <img src="in.png" alt="Instagram">
                     Instagram
                 </div>
-                <button class="open-button" onclick="openLink('https://www.instagram.com/contractionszone?igsh=enpuYjV6dzMzOHV4 ')">Open</button>
+                <button class="open-button" onclick="openLink('https://www.instagram.com/contractionszone?igsh=enpuYjV6dzMzOHV4')">Open</button>
             </div>
             <div class="link-container">
                 <div class="link-text">
