--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #87ceeb;
+            background-color: black;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -89,7 +89,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(135, 206, 235, 0.8);
+            background-color: black;
             display: flex;
             flex-direction: column;
             align-items: center;
