--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
 
     <!-- Loading screen -->
     <div class="loading-screen">
-        <img src="The_Contradiction_Zone_Circular_Adjusted.png" alt="Loading">
+        <img src="Leonardo_Phoenix_10_Create_a_visually_captivating_logo_for_The_0.jpg" alt="Loading">
         <p>Loading...</p>
     </div>
 
     <!-- Main content -->
     <div class="main-content">
-        <img src="The_Contradiction_Zone_Circular_Adjusted.png" alt="Profile Picture" class="profile-picture">
+        <img src=Leonardo_Phoenix_10_Create_a_visually_captivating_logo_for_The_0.jpg" alt="Profile Picture" class="profile-picture">
         <div class="profile-text">CONTRADICTIONS ZONE</div>
         <div class="container">
             <div class="link-container">
