--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <!-- Main content -->
     <div class="main-content">
-        <img src=Leonardo_Phoenix_10_Create_a_visually_captivating_logo_for_The_0.jpg" alt="Profile Picture" class="profile-picture">
+        <img src="Leonardo_Phoenix_10_Create_a_visually_captivating_logo_for_The_0.jpg" alt="Profile Picture" class="profile-picture">
         <div class="profile-text">CONTRADICTIONS ZONE</div>
         <div class="container">
             <div class="link-container">
