--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             margin-top: 10px;
             font-size: 1.5em;
             font-family: 'Cursive', sans-serif;
-            color: red;
+            color: blue;
             text-shadow: 2px 2px 5px white;
         }
 
@@ -159,7 +159,7 @@
         .profile-text {
             font-size: 1.5em;
             font-family: 'Cursive', sans-serif;
-            color: green;
+            color: red;
             text-shadow: 2px 2px 5px white;
             font-weight: bold;
             margin-bottom: 20px;
