--- a/index.html
+++ b/index.html
@@ -226,9 +226,8 @@
 </head>
 <body>
     <!-- Clouds -->
-    <div class="cloud">⁉️</div>
     <div class="cloud">☁️</div>
-    <div class="cloud">❗</div>
+    <div class="cloud">🌨️</div>
 
     <!-- Birds -->
     <div class="bird">🤔</div>
@@ -244,7 +243,7 @@
     <!-- Main content -->
     <div class="main-content">
         <img src="Leonardo_Phoenix_10_Create_a_visually_captivating_logo_for_The_0.jpg" alt="Profile Picture" class="profile-picture">
-        <div class="profile-text">CONTRADICTIONS ZONE</div>
+        <div class="profile-text">Paradoxical Shuayb</div>
         <div class="container">
             <div class="link-container">
                 <div class="link-text">
