--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
     <!-- Main content -->
     <div class="main-content">
-        <img src="Leonardo_Phoenix_10_Create_a_visually_captivating_logo_for_The_0.jpg" alt="Profile Picture" class="profile-picture">
+        <img src="paradoxical_shuayb_circular_blunt.png" alt="Profile Picture" class="profile-picture">
         <div class="profile-text">Paradoxical Shuayb</div>
         <div class="container">
             <div class="link-container">
