--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
     <!-- Loading screen -->
     <div class="loading-screen">
-        <img src="Leonardo_Phoenix_10_Create_a_visually_captivating_logo_for_The_0.jpg" alt="Loading">
+        <img src="paradoxical_shuayb_circular_blunt.png" alt="Loading">
         <p>Loading...</p>
     </div>
 
