--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div class="cloud">🌨️</div>
 
     <!-- Birds -->
-    <div class="bird">🤔</div>
+    <div class="bird"></div>
     <div class="bird">💭</div>
     <div class="bird">❓</div>
 
