--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <img src="in.png" alt="Instagram">
                     Instagram
                 </div>
-                <button class="open-button" onclick="openLink('https://www.instagram.com/contractionszone?igsh=enpuYjV6dzMzOHV4')">Open</button>
+                <button class="open-button" onclick="openLink('https://www.instagram.com/paradoxical_shuayb?igsh=cW5yY2J0OWxqOXlo')">Open</button>
             </div>
             <div class="link-container">
                 <div class="link-text">
