--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <img src="u.png" alt="YouTube">
                     YouTube
                 </div>
-                <button class="open-button" onclick="openLink('https://www.youtube.com/@THECONTRADICTIONSZONE')">Open</button>
+                <button class="open-button" onclick="openLink('https://www.youtube.com/@Paradoxical_shuayb')">Open</button>
             </div>
             <div class="link-container">
                 <div class="link-text">
